[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12"
ndarray = { version = "0.15.6", features = ["rayon"] }
num = {version = "0.4.1", default-features = true}
petgraph = "0.6"
rayon = "1.8"


[profile.dev.package."*"]
opt-level = 3
debug = false

[dev-dependencies]
rstest = "0.18.2"
